--- a/projects/ngx-mat-range-slider/src/lib/ngx-mat-range-slider.component.html
+++ b/projects/ngx-mat-range-slider/src/lib/ngx-mat-range-slider.component.html
@@ -1,6 +1,6 @@
 <div class="full-width ranger-slider">
   <mat-slider
-    (change)="valueChange($event)"
+    (change)="valueChange()"
     (input)="minValueInput($event)"
     [(ngModel)]="minValue"
     [color]="minColor"
@@ -12,7 +12,7 @@
     step="1">
   </mat-slider>
   <mat-slider
-    (change)="valueChange($event)"
+    (change)="valueChange()"
     (input)="maxValueInput($event)"
     [(ngModel)]="maxValue"
     [color]="maxColor"
